--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@types/node": "^12.12.29",
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
+    "@types/react-redux": "^7.1.7",
+    "@types/react-router-dom": "^5.1.3",
     "axios": "^0.19.2",
     "immutable": "^4.0.0-rc.12",
     "react": "^16.13.0",
