--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"@testing-library/react": "^9.5.0",
 		"@testing-library/user-event": "^7.2.1",
 		"@types/jest": "^24.9.1",
+		"@types/lodash": "^4.14.150",
 		"@types/node": "^12.12.29",
 		"@types/react": "^16.9.23",
 		"@types/react-dom": "^16.9.5",
@@ -19,6 +20,7 @@
 		"connected-react-router": "^6.8.0",
 		"immutable": "^4.0.0-rc.12",
 		"install": "^0.13.0",
+		"lodash": "^4.17.15",
 		"npm": "^6.14.4",
 		"react": "^16.13.0",
 		"react-dom": "^16.13.0",
