--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"redux": "^4.0.5",
 		"redux-saga": "^1.1.3",
 		"reselect": "^4.0.0",
+		"socket.io-client": "^3.0.0",
 		"typescript": "^3.7.5"
 	},
 	"scripts": {
