--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,15 +7,17 @@
 		"esModuleInterop": true,
 		"allowSyntheticDefaultImports": true,
 		"strict": true,
+		"useUnknownInCatchVariables": false,
 		"forceConsistentCasingInFileNames": true,
 		"module": "esnext",
 		"moduleResolution": "node",
 		"resolveJsonModule": true,
 		"isolatedModules": true,
 		"noEmit": true,
-		"jsx": "react",
+		"jsx": "react-jsx",
 		"baseUrl": "./src",
-		"downlevelIteration": true
+		"downlevelIteration": true,
+		"noFallthroughCasesInSwitch": true
 	},
 	"include": ["src"]
 }
