--- a/package.json
+++ b/package.json
@@ -19,29 +19,40 @@
 		"axios": "^0.19.2",
 		"connected-react-router": "^6.8.0",
 		"immutable": "^4.0.0-rc.12",
-		"install": "^0.13.0",
 		"lodash": "^4.17.15",
-		"npm": "^6.14.4",
-		"react": "^16.13.0",
-		"react-dom": "^16.13.0",
-		"react-redux": "^7.2.0",
+		"react": "17.0.2",
+		"react-dom": "17.0.2",
+		"react-redux": "7.2.4",
 		"react-router-dom": "^5.1.2",
-		"react-scripts": "3.4.0",
+		"react-scripts": "4.0.3",
 		"react-swipeable": "^5.5.1",
-		"redux": "^4.0.5",
-		"redux-saga": "^1.1.3",
+		"redux": "4.1.1",
+		"redux-saga": "1.1.3",
 		"reselect": "^4.0.0",
 		"socket.io-client": "^3.0.0",
-		"typescript": "^3.7.5"
+		"typescript": "4.4.4"
 	},
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
-		"eject": "react-scripts eject"
+		"eject": "react-scripts eject",
+		"storybook": "start-storybook -p 6006 -s public",
+		"build-storybook": "build-storybook -s public",
+		"chromatic": "chromatic"
 	},
 	"eslintConfig": {
-		"extends": "react-app"
+		"extends": "react-app",
+		"overrides": [
+			{
+				"files": [
+					"**/*.stories.*"
+				],
+				"rules": {
+					"import/no-anonymous-default-export": "off"
+				}
+			}
+		]
 	},
 	"browserslist": {
 		"production": [
