--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"@material-ui/icons": "^4.9.1",
 		"@material-ui/lab": "^4.0.0-alpha.47",
 		"axios": "^0.19.2",
-		"connected-react-router": "^6.8.0",
+		"connected-react-router": "^6.9.2",
 		"immutable": "^4.0.0-rc.12",
 		"lodash": "^4.17.15",
 		"react": "17.0.2",
@@ -17,7 +17,7 @@
 		"react-scripts": "4.0.3",
 		"react-swipeable": "^5.5.1",
 		"redux": "4.1.1",
-		"redux-saga": "1.1.3",
+		"redux-saga": "^1.1.3",
 		"reselect": "^4.0.0",
 		"socket.io-client": "^3.0.0",
 		"typescript": "4.4.4"
@@ -71,8 +71,6 @@
 		"@storybook/node-logger": "^6.3.12",
 		"@storybook/preset-create-react-app": "^3.2.0",
 		"@storybook/react": "^6.3.12",
-		"chromatic": "^6.0.4",
-		"prettier": "^1.19.1",
 		"@testing-library/jest-dom": "^4.2.4",
 		"@testing-library/react": "^9.5.0",
 		"@testing-library/user-event": "^7.2.1",
@@ -82,6 +80,8 @@
 		"@types/react": "^16.9.23",
 		"@types/react-dom": "^16.9.5",
 		"@types/react-redux": "^7.1.7",
-		"@types/react-router-dom": "^5.1.3"
+		"@types/react-router-dom": "^5.1.3",
+		"chromatic": "^6.0.4",
+		"prettier": "^1.19.1"
 	}
 }
